refactor: improved quality of code